# veritas-tg51

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
veritas_tg51/: main.py
veritas_tg51/models/: db.py  entities.py
veritas_tg51/physics/: chamber_data.py  corrections.py  tg51_electron.py  tg51_photon.py
veritas_tg51/reports/: pdf_generator.py
veritas_tg51/tests/: test_physics.py
veritas_tg51/ui/: main_window.py  styles.py
veritas_tg51/ui/dialogs/: jaffe_dialog.py  new_session_dialog.py
veritas_tg51/ui/pages/: equipment_page.py  history_page.py  session_page.py
veritas_tg51/ui/widgets/: form_widgets.py
veritas_tg51/ui/worksheets/: electron_worksheet.py  photon_worksheet.py
