[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "veritas-tg51"
version = "1.0.0"
description = "AAPM TG-51 absolute dosimetry calibration application for medical linear accelerators"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "HW Salmon"},
]
keywords = ["medical physics", "TG-51", "dosimetry", "radiotherapy", "calibration", "linac"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "PySide6>=6.7.0",
    "SQLAlchemy>=2.0.0",
    "pydantic>=2.0.0",
    "numpy>=1.26.0",
    "reportlab>=4.0.0",
    "openpyxl>=3.1.0",
    "Pillow>=10.0.0",
]

[project.scripts]
veritas-tg51 = "veritas_tg51.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["veritas_tg51*"]

[tool.setuptools.package-data]
veritas_tg51 = ["data/icon.png", "data/icon.ico"]
